--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.1",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "parsedown/laravel": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -26,7 +27,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+      	"files": [
+          "app/Helpers/image_helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
